# src/shared/modules/user/user-endpoint.enum.ts
@@ -2,6 +2,7 @@ enum UserEndpoint {
   SignUp = '/sign-up',
   LogIn = '/login',
   LogOut = '/logout',
+  UploadAvatar = '/:userId/avatar',
 }
 
 export { UserEndpoint };
